Fix #10229 - [Fix] Fixes and refactoring for regulatory authentication